2007-10-11  Daniel Macks  <dmacks@netspace.org>

	* Validator.pm: More explicit error message.

2007-10-11  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm, Validator.pm: Added "private" Shlibs support; if a
	Shlibs entry starts with just "!" it will get ignored by the validator.

2007-10-02  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* SelfUpdate/CVS.pm, SelfUpdate/rsync.pm: update to use
	SelfUpdateTrees for determining which trees get pulled out.
	Also, fix 10.5 support for rsync.

2007-09-30  Christian Schaffner  <chris01@users.sourceforge.net>

	* VirtPackage.pm: Remove debugging output
	
2007-09-28  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm, Mirror.pm: Implement *cough* "feature requests" from
	http://tdk.hates-software.com/2007/09/28/a3fbc1b7.html    ;)

2007-09-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Detect .deb containing global file updated at
	installation-time by perl modules

2007-09-04  Christian Schaffner  <chris01@users.sourceforge.net>

	* PkgVersion.pm: Remove get_desc* methods again, since the pdb dump script
	now directly calls param_default_expanded
	
2007-09-03  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Consistent naming of accessors for their field-names

2007-09-03  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Consolidate special-purpose private function into
	more generic one.

2007-09-02  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: *really* disable extended attribute copying when 
	calling tar
	* PkgVersion.pm: prevent Apple's perl from building perlmods fat

2007-09-02  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: param_default_expanded can override default %-exp
	map and more flexibly handle %-exp errors.

2007-08-29  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Simplify parameter passing; document wrappers in
	terms of their back-end.

2007-08-28  Benjamin Reed  <rangerrick@users.sourceforge.net>
